Fix "player info" being too close to nav bar

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -260,7 +260,7 @@ footer {
 main {
     width: 70rem;
     max-width: 85%;
-    margin: auto;
+    margin: 3rem auto auto auto;
 }
 
 main>h1 {
